Colaboratory를 통해 생성됨

--- a/TestCode.ipynb
+++ b/TestCode.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1ThUnLq2eUXmsQ7YfyLfHDwG2h0dDLvkh",
-      "authorship_tag": "ABX9TyOY2vNnYzEqGy9kF8JQsSey",
+      "authorship_tag": "ABX9TyNZJNf9vFjnTLFb7qCasOht",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3228,6 +3228,24 @@
         "지)\n",
         "  - pip uninstall package-name : 해당 패키지를 제거\n",
         "  - pip help : pip 명령어 관련된 도움말을 출력"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s7tA7rIL1kdY"
+      },
+      "source": [
+        "- import\n",
+        "  - 모듈 내의 모든 내용을 불러 들일 때\n",
+        "    - import 모듈\n",
+        "    - import 모듈1, 모듈2, 모듈3 ...\n",
+        "    - import 모듈명 as 별명\n",
+        "  - 모듈에서 특정 함수를 불러올 때\n",
+        "    - from 모듈 import 함수\n",
+        "    - from 모듈 import 함수1, 함수2, 함수3 ...\n",
+        "    - from 모듈 import *\n",
+        "    - from 모듈 import 함수 as 별명"
       ]
     },
     {
