Colaboratory를 통해 생성됨 - 1일차

--- a/TestCode.ipynb
+++ b/TestCode.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1ThUnLq2eUXmsQ7YfyLfHDwG2h0dDLvkh",
-      "authorship_tag": "ABX9TyNZJNf9vFjnTLFb7qCasOht",
+      "authorship_tag": "ABX9TyOEXaMw3PzeKG7FX5WdNYul",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3249,12 +3249,223 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "OaY_yMkQ0DZ-"
+        "id": "gN58L0S-24xF"
       },
       "source": [
-        ""
+        "#### User 모듈 만들기 & 활용 (1/2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ma5AHyt03BG0"
+      },
+      "source": [
+        "#### User 모듈 만들기 & 활용 (2/2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z7ZqvRm_3Cte"
+      },
+      "source": [
+        "### Namespace, Scope"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ePjjuHy83F0e"
+      },
+      "source": [
+        "#### Name Spaces & Scopes\n",
+        "- Assignment staatement의 의미 : x = 11\n",
+        "  - x가 name space에 존재하지 않으면 x라는 name을 create하고 11 이라는 object를 refe\n",
+        "rence\n",
+        "  - 존재하면, x라는 name이 새로운 object 11을 reference\n",
+        "- Name space : 이름이 정의되는 공간. dir()로 현재 name space에 있는 name들, 즉 s\n",
+        "ymbol table을 볼 수 있다.\n",
+        "- A scope refer to a region of a program from where a namespace can be accessed wi\n",
+        "thout a assigned memory"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OaY_yMkQ0DZ-",
+        "outputId": "e47c48f4-cf1d-4fe1-e102-8d90d45dca97"
+      },
+      "source": [
+        "a = 'global a'\n",
+        "y = 'global y'\n",
+        "\n",
+        "def test_namespace():\n",
+        "  a = 'enclosing a'\n",
+        "\n",
+        "  def inner_namespace():\n",
+        "    a = 'local a'\n",
+        "    print(a)\n",
+        "    print(y)\n",
+        "\n",
+        "  inner_namespace()\n",
+        "\n",
+        "  print(a)\n",
+        "\n",
+        "test_namespace()\n",
+        "\n",
+        "print(a)"
+      ],
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "local a\n",
+            "global y\n",
+            "enclosing a\n",
+            "global a\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 420
+        },
+        "id": "Ef7iEfjj2_pe",
+        "outputId": "9d9b65ed-20d5-452d-b492-db19cdf6b7f4"
+      },
+      "source": [
+        "x = 11\n",
+        "\n",
+        "def f():\n",
+        "  print(f, X) # access global X\n",
+        "\n",
+        "def g():\n",
+        "  X = 22 # create local name 'X' in function g\n",
+        "  print(g, 'name space', dir())\n",
+        "  print(g, X)\n",
+        "\n",
+        "def gl():\n",
+        "  global X # now name X is global scope\n",
+        "  X = 55 # assign to global X\n",
+        "\n",
+        "print(__name__, 'name spaces:', dir())\n",
+        "f()\n",
+        "g()\n",
+        "gl(); print('after calling gl', X)"
+      ],
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "__main__ name spaces: ['In', 'MyMajor', 'Out', '_', '_102', '_107', '_109', '_111', '_113', '_114', '_115', '_116', '_117', '_120', '_121', '__', '___', '__builtin__', '__builtins__', '__doc__', '__loader__', '__name__', '__package__', '__spec__', '_dh', '_i', '_i1', '_i10', '_i100', '_i101', '_i102', '_i103', '_i104', '_i105', '_i106', '_i107', '_i108', '_i109', '_i11', '_i110', '_i111', '_i112', '_i113', '_i114', '_i115', '_i116', '_i117', '_i118', '_i119', '_i12', '_i120', '_i121', '_i122', '_i123', '_i124', '_i125', '_i126', '_i127', '_i128', '_i129', '_i13', '_i130', '_i131', '_i132', '_i133', '_i134', '_i135', '_i14', '_i15', '_i16', '_i17', '_i18', '_i19', '_i2', '_i20', '_i21', '_i22', '_i23', '_i24', '_i25', '_i26', '_i27', '_i28', '_i29', '_i3', '_i30', '_i31', '_i32', '_i33', '_i34', '_i35', '_i36', '_i37', '_i38', '_i39', '_i4', '_i40', '_i41', '_i42', '_i43', '_i44', '_i45', '_i46', '_i47', '_i48', '_i49', '_i5', '_i50', '_i51', '_i52', '_i53', '_i54', '_i55', '_i56', '_i57', '_i58', '_i59', '_i6', '_i60', '_i61', '_i62', '_i63', '_i64', '_i65', '_i66', '_i67', '_i68', '_i69', '_i7', '_i70', '_i71', '_i72', '_i73', '_i74', '_i75', '_i76', '_i77', '_i78', '_i79', '_i8', '_i80', '_i81', '_i82', '_i83', '_i84', '_i85', '_i86', '_i87', '_i88', '_i89', '_i9', '_i90', '_i91', '_i92', '_i93', '_i94', '_i95', '_i96', '_i97', '_i98', '_i99', '_ih', '_ii', '_iii', '_oh', '_sh', 'a', 'add', 'age', 'alien', 'alien_keys', 'alien_values', 'alphabet', 'alphabets', 'b', 'bicycles', 'c', 'cars', 'copy', 'count', 'counters', 'delimiter1', 'delimiter2', 'delimiter3', 'digits', 'empty_tuple', 'exit', 'f', 'favorite_language', 'fee', 'fruits', 'g', 'get_ipython', 'get_userinfo', 'gl', 'greet_user', 'i', 'items', 'key', 'menu', 'message', 'messages', 'motorcycles', 'my_func', 'myfamily', 'name1', 'nums', 'polynomial', 'popped_motorcycle', 'quit', 'reports', 's', 'score1', 'sub', 'test_namespace', 'thisdict', 'txt', 'user_description', 'x', 'y']\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-135-bbd2653a1f59>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'name spaces:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mgl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'after calling gl'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-135-bbd2653a1f59>\u001b[0m in \u001b[0;36mf\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# access global X\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 251
+        },
+        "id": "ESzafWjX387F",
+        "outputId": "f437685b-64a7-49f2-fb9e-242549835e13"
+      },
+      "source": [
+        "def h1():\n",
+        "  X = 33\n",
+        "  def nested():\n",
+        "    print(nested, X) # access X(33) in h1\n",
+        "  nested()\n",
+        "\n",
+        "def h2():\n",
+        "  X = 33\n",
+        "  def nested():\n",
+        "    nonlocal X #name X is not local but enclosing scope\n",
+        "    X = 44 #(nname X in h2)\n",
+        "  nested()\n",
+        "  print(h2, X)\n",
+        "\n",
+        "h1()\n",
+        "h2(); print('after calling h2', X)"
+      ],
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<function h1.<locals>.nested at 0x7f5a5c81ba70> 33\n",
+            "<function h2 at 0x7f5a5c843680> 44\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-136-e8af3b2057dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mh1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mh2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'after calling h2'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J7s4PSfp4zwv"
+      },
+      "source": [
+        "### List Comprehension, Lambda, map, filter"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "K1Jtuh9u45xr"
+      },
+      "source": [
+        "#### List Comprehension(리스트 컴플리헨션)\n",
+        "- 파이썬은 다른 시퀀스나 이터러블에서 새 리스트를 만들어내는 간결한 구문을 제공\n",
+        "- 이런 식을 리스트 컴프리헨션이라 한다."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JDoXr5dg4x_8"
+      },
+      "source": [
+        "a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
       ],
       "execution_count": null,
       "outputs": []
