Colaboratory를 통해 생성됨

--- a/TestCode.ipynb
+++ b/TestCode.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1ThUnLq2eUXmsQ7YfyLfHDwG2h0dDLvkh",
-      "authorship_tag": "ABX9TyOMU7I8X8RUOL0gQPgKOgZn",
+      "authorship_tag": "ABX9TyOFm0wFgn7eHtOAXPtR1iZD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4121,7 +4121,323 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XkZ4t7Os9u9l"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XkZ4t7Os9u9l",
+        "outputId": "42e02f96-5eec-49da-a2be-2a857e00412f"
+      },
+      "source": [
+        "# 초기화 메서드 __init__() \n",
+        "# 인스턴스 생성시 자동 호출됨\n",
+        "class Student:\n",
+        "  def __init__(self):\n",
+        "    print('init')\n",
+        "\n",
+        "  def method1(self):\n",
+        "    print('method1')\n",
+        "student1 = Student()\n"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "init\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yzk1kMl2BHtF"
+      },
+      "source": [
+        "#### self 이해하기\n",
+        "- 초기화 메서드 __init__() 선언시 첫번째 파라미터\n",
+        "- 함수내 메소드 선언시 첫번째 파라미터\n",
+        "- 인스턴스 자신을 가르킴\n",
+        "- 메소드, __init__() 호출시 자동 바인딩됨"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TQrj9F5UBGt2",
+        "outputId": "6bad4701-ee7c-4891-ae99-18a7af476c4e"
+      },
+      "source": [
+        "class Student:\n",
+        "  def __init__(self):\n",
+        "    print('init', id(self))\n",
+        "  \n",
+        "  def method1(self):\n",
+        "    print('method1', id(self))\n",
+        "\n",
+        "student1 = Student()\n",
+        "student1.method1()\n",
+        "print('id', id(student1))"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "init 140431860586832\n",
+            "method1 140431860586832\n",
+            "id 140431860586832\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DaLxagbeBSn8"
+      },
+      "source": [
+        "#### 인스턴스 출력\n",
+        "- 인스턴스 출력메소드__str__() \n",
+        "- 인스턴스 출력시 실행됨"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Du_tk9nDBQ4S",
+        "outputId": "f66140d3-2623-4ad6-ae60-7ff30ad3664c"
+      },
+      "source": [
+        "class Student:\n",
+        "  def __init__(self, name):\n",
+        "    self.name = name\n",
+        "    print('init', id(self))\n",
+        "  \n",
+        "  def method1(self):\n",
+        "    print('method1', id(self))\n",
+        "    \n",
+        "  def __str__(self):\n",
+        "    return f'name: {self.name}'\n",
+        "    \n",
+        "student1 = Student('Jessy')\n",
+        "print(student1)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "init 140431860584784\n",
+            "name: Jessy\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x8GAFigeBuGD"
+      },
+      "source": [
+        "#### 학생 성적 프로그램\n",
+        "- 학생들의 점수 총점, 평균과 전체 총점, 평균을 계산하는 프로그램\n",
+        "- 학생 Student클래스 생성하기\n",
+        "- 생성시 이름, 국어, 영어, 수학점수 받기\n",
+        "- 학생 3명 인스턴스 만들기"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gdvNi0mCBs-q"
+      },
+      "source": [
+        "class Student:\n",
+        "  def __init__(self, name, korean, english, math):\n",
+        "    self.name = name\n",
+        "    self.korean = korean\n",
+        "    self.english = english\n",
+        "    self.math = math\n",
+        "\n",
+        "jessy = Student('jessy', 90,60,90)\n",
+        "beth = Student('beth', 90,90,90)\n",
+        "jay = Student('jay', 90,60,60)\n"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lyFdJ1z6B9_L"
+      },
+      "source": [
+        "- 학생들의 점수 총점, 평균과 전체 총점, 평균을 계산하는 프로그램\n",
+        "- 학생 Student클래스 생성하기\n",
+        "- 생성시 이름, 국어, 영어, 수학점수 받기\n",
+        "- 학생 3명 인스턴스 만들기\n",
+        "- get_sum() 메서드 만들기 : 3과목 총점 반환\n",
+        "- get_avg() 메서드 만들기 : 3과목 평균 반환"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w7yqGseDB30x"
+      },
+      "source": [
+        "class Student:\n",
+        "  def __init__(self, name, korean, english, math):\n",
+        "    self.name = name\n",
+        "    self.korean = korean\n",
+        "    self.english = english\n",
+        "    self.math = math\n",
+        "  \n",
+        "  def get_sum(self):\n",
+        "    return self.korean + self.english + self.math\n",
+        "  \n",
+        "  def get_avg(self):\n",
+        "    return self.get_sum() / 3.\n"
+      ],
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wBx9oSbsCMJg"
+      },
+      "source": [
+        "- 학생들의 점수 총점, 평균과 전체 총점, 평균을 계산하는 프로그램 \n",
+        "- 학생 Student클래스 생성하기 \n",
+        "- 생성시 이름, 국어, 영어, 수학점수 받기 - get_sum() 메서드 만들기 \n",
+        "- get_avg() 메서드 만들기 \n",
+        "- 학생 3명 인스턴스 만들기 \n",
+        "- 각 이름,총점 출력 \n",
+        "- 각 이름,평균 출력"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "egVmtnl1CHc3",
+        "outputId": "f4391956-c213-45c6-efe1-f85cc03485a5"
+      },
+      "source": [
+        "class Student:\n",
+        "  def __init__(self, name, korean, english, math):\n",
+        "    self.name = name\n",
+        "    self.korean = korean\n",
+        "    self.english = english\n",
+        "    self.math = math\n",
+        "    \n",
+        "  def get_sum(self):\n",
+        "    return self.korean + self.english + self.math\n",
+        "    \n",
+        "  def get_avg(self):\n",
+        "    return self.get_sum() / 3.\n",
+        "\n",
+        "jessy = Student('jessy', 90,60,90)\n",
+        "beth = Student('beth', 90,90,90)\n",
+        "jay = Student('jay', 90,60,60)\n",
+        "\n",
+        "for student in (jessy, beth, jay):\n",
+        "  print(student.name, student.get_sum())\n",
+        "  print(student.name, student.get_avg())"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "jessy 240\n",
+            "jessy 80.0\n",
+            "beth 270\n",
+            "beth 90.0\n",
+            "jay 210\n",
+            "jay 70.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0ycIrftQCk0k"
+      },
+      "source": [
+        "- 3학생의 전체 합산 점수, 전체 평균 구하기\n",
+        "- 앞의 Student클래스 이용"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FR6JI-4OCJ1X"
+      },
+      "source": [
+        "jessy = Student('jessy', 90,60,90)\n",
+        "beth = Student('beth', 90,90,90)\n",
+        "jay = Student('jay', 90,60,60)\n"
+      ],
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CaQoS6-ECzvt"
+      },
+      "source": [
+        "- 3학생 합산 점수, 합산 평균 구하기"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KY1Es9VvCwcf",
+        "outputId": "ce748dea-4cea-4647-8b96-edd6b48e8ef2"
+      },
+      "source": [
+        "# 3명 학생의 전체 합산 점수, 전체 평균\n",
+        "students = (jessy, beth, jay)\n",
+        "scores = [student.get_sum() for student in students]\n",
+        "print('total', sum(scores))\n",
+        "print('average', sum(scores) / len(students))"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total 720\n",
+            "average 240.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dY1MpqiuC30N"
       },
       "source": [
         ""
