Colaboratory를 통해 생성됨 - Class

--- a/TestCode.ipynb
+++ b/TestCode.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1ThUnLq2eUXmsQ7YfyLfHDwG2h0dDLvkh",
-      "authorship_tag": "ABX9TyOFm0wFgn7eHtOAXPtR1iZD",
+      "authorship_tag": "ABX9TyPFzVIEUfZOcOmMUNmTJpf7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4435,9 +4435,547 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mNXwrsX2C-O5"
+      },
+      "source": [
+        "# 상속 \n",
+        "\n",
+        "- 기존 클래스에서 일부를 추가하거나 변경하여 새로운 클래스 생성\n",
+        "- 코드 재사용성을 높임\n",
+        "- 학교라는 공간 - 학생, 선생님 클래스 생성"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "dY1MpqiuC30N"
+      },
+      "source": [
+        "class Student:\n",
+        "  def __init__(self, name, class_num):\n",
+        "    self.name = name\n",
+        "    self.class_num = class_num\n",
+        "    \n",
+        "  def get_role(self):\n",
+        "    return 'member'\n",
+        "    \n",
+        "  def __str__(self):\n",
+        "    return f'이름은 {self.name}, 반은{self.class_num}'\n",
+        "\n",
+        "class Teacher:\n",
+        "  def __init__(self, name, class_num):\n",
+        "    self.name = name\n",
+        "    self.class_num = class_num\n",
+        "    \n",
+        "  def get_role(self):\n",
+        "    return 'member'\n",
+        "    \n",
+        "  def __str__(self):\n",
+        "    return f'이름은 {self.name}, 반은{self.class_num}'\n"
+      ],
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yDGZTimcDPHx"
+      },
+      "source": [
+        "- Student, Teacher 클래스 동일\n",
+        "- 같은 코드를 2번 반복하여 쓰게 됨\n",
+        "- 속성으로 학년을 추가하게 되면?\n",
+        "- 중복되는 것을 상위클래스로 만들고 상속받기\n",
+        "- 상속받는 방법 : 클래스 생성시 상속할 클래스 명시"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "63fYx8-3DOHm",
+        "outputId": "288320b6-4280-4ac8-f7f0-d6482ee569d3"
+      },
+      "source": [
+        "class Member:\n",
+        "  def __init__(self, name, class_num):\n",
+        "    self.name = name\n",
+        "    self.class_num = class_num\n",
+        "    \n",
+        "  def get_role(self):\n",
+        "    return 'member'\n",
+        "    \n",
+        "  def __str__(self):\n",
+        "    return f'이름은 {self.name}, 반은{self.class_num}'\n",
+        "  \n",
+        "class Student(Member):\n",
+        "  pass\n",
+        "  \n",
+        "class Teacher(Member):\n",
+        "  pass\n",
+        "\n",
+        "student1 = Student('Jay', 1)\n",
+        "teacher1 = Teacher('Merry', 1)\n",
+        "\n",
+        "print(student1)\n",
+        "print(teacher1)\n"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "이름은 Jay, 반은1\n",
+            "이름은 Merry, 반은1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jLSlllyID48V"
+      },
+      "source": [
+        "- issubclass() : 클래스가 특정 클래스에서 파생되었는지"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rbiar1clD0e3",
+        "outputId": "43294c42-8807-4c4c-dd28-1322dfc5206b"
+      },
+      "source": [
+        "#다른 클래스를 상속했는지 확인\n",
+        "print(issubclass(Student, Member)) #True\n",
+        "print(issubclass(Teacher, Member)) #True"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "my0NW3A7D5rV"
+      },
+      "source": [
+        "- isinstance(): 인스턴스가 특정 클래스의 인스턴스 인지 확인\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ID0f2xTzD6BB",
+        "outputId": "9f5407c4-39f2-4a40-9aec-db236e58cb91"
+      },
+      "source": [
+        "#특정 클래스의 인스턴스인지 확인\n",
+        "print(isinstance(student1, Student)) #True\n",
+        "print(isinstance(student1, Teacher)) #False\n",
+        "print(isinstance(student1, Member)) #True"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "False\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8eUI4jLoELdC"
+      },
+      "source": [
+        "Member : super, parent 클래스\n",
+        "Student, Teacher : sub, child 클래스"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Z0GfpKv9ERZb"
+      },
+      "source": [
+        "#### 상속 : 오버라이드\n",
+        "\n",
+        "- 상속받은 메서드를 수정"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kb76Z_NtEJIr"
+      },
+      "source": [
+        "class Member:\n",
+        "  def __init__(self, name, class_num):\n",
+        "    self.name = name\n",
+        "    self.class_num = class_num\n",
+        "    \n",
+        "  def get_role(self):\n",
+        "    return 'member'\n",
+        "    \n",
+        "  def __str__(self):\n",
+        "    return f'이름은 {self.name}, 반은{self.class_num}'\n",
+        "  \n",
+        "class Student(Member):\n",
+        "  def get_role(self):\n",
+        "    return 'Student'\n",
+        "  \n",
+        "class Teacher(Member):\n",
+        "  def get_role(self):\n",
+        "    return 'Teacher'\n",
+        "\n",
+        "student1 = Student('Jay', 1)\n",
+        "teacher1 = Teacher('Merry', 1)"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tYKV-PGTE5Xd"
+      },
+      "source": [
+        "#### 상속 : 메서드 추가\n",
+        "\n",
+        "- 상속받은 클래스는 메서드 추가 기능"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 251
+        },
+        "id": "XGTiWoxRElmk",
+        "outputId": "45e08903-1118-455d-dce7-029ae3bb0d9b"
+      },
+      "source": [
+        "class Member:\n",
+        "  def __init__(self, name, class_num):\n",
+        "    self.name = name\n",
+        "    self.class_num = class_num\n",
+        "    \n",
+        "  def get_role(self):\n",
+        "    return 'member'\n",
+        "    \n",
+        "  def __str__(self):\n",
+        "    return f'이름은 {self.name}, 반은{self.class_num}'\n",
+        "  \n",
+        "class Student(Member):\n",
+        "  def get_role(self):\n",
+        "    return 'Student'\n",
+        "\n",
+        "  def study(self):\n",
+        "    print('공부합니다')\n",
+        "  \n",
+        "class Teacher(Member):\n",
+        "  def get_role(self):\n",
+        "    return 'Teacher'\n",
+        "\n",
+        "student1 = Student('Jay', 1)\n",
+        "teacher1 = Teacher('Merry', 1)\n",
+        "\n",
+        "print(student1.study())\n",
+        "print(teacher1.study())"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "공부합니다\n",
+            "None\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-41-1b5687fc82ce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstudent1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstudy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteacher1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstudy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Teacher' object has no attribute 'study'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "erDABaKaFHcV"
+      },
+      "source": [
+        "#### 상속 : 속성 추가\n",
+        "- 상속받은 클래스는 메서드 추가 가능\n",
+        "- __init__() 메서드에서 super().__init__() 호출 필요"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 232
+        },
+        "id": "qrxj6HDcFGI8",
+        "outputId": "a61bce8b-bac2-4211-8825-56b469802bb9"
+      },
+      "source": [
+        "class Member:\n",
+        "  def __init__(self, name, class_num):\n",
+        "    self.name = name\n",
+        "    self.class_num = class_num\n",
+        "    \n",
+        "  def get_role(self):\n",
+        "    return 'member'\n",
+        "    \n",
+        "  def __str__(self):\n",
+        "    return f'이름은 {self.name}, 반은{self.class_num}'\n",
+        "  \n",
+        "class Student(Member):\n",
+        "  def __init__(self, name, class_num, score):\n",
+        "    super().__init__(name, class_num)\n",
+        "    self.score = score\n",
+        "\n",
+        "  def get_role(self):\n",
+        "    return 'Student'\n",
+        "\n",
+        "  def study(self):\n",
+        "    print('공부합니다')\n",
+        "  \n",
+        "class Teacher(Member):\n",
+        "  def get_role(self):\n",
+        "    return 'Teacher'\n",
+        "\n",
+        "student1 = Student('Jay', 1, 90)\n",
+        "teacher1 = Teacher('Merry', 1)\n",
+        "\n",
+        "print(student1.score)\n",
+        "print(teacher1.score)"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "90\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-43-4d288b8d45e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstudent1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteacher1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Teacher' object has no attribute 'score'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jpOJJx6tFhOk"
+      },
+      "source": [
+        "#### 다형성 \n",
+        "- 다형성을 느슨하게 구현\n",
+        "- 클래스에 상관없이 같은 동작을 다른 객체에 적용 가능\n",
+        "- obj 파라미터에 대응될 인수로 들어갈 수 있는 객체는?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UFZthTlQFa6g"
+      },
+      "source": [
+        "def who_says(obj):\n",
+        "  obj.say()\n"
+      ],
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ppjurOqSF_lY",
+        "outputId": "f27a049e-ed08-4b58-af85-14fa34f95b62"
+      },
+      "source": [
+        "class Animal:\n",
+        "  def eat(self):\n",
+        "    print('eat')\n",
+        "    \n",
+        "  def say(self):\n",
+        "    print('animal')\n",
+        "    \n",
+        "class Cat(Animal):\n",
+        "  def say(self):\n",
+        "    print('cat')\n",
+        "\n",
+        "class Dog(Animal):\n",
+        "  def say(self):\n",
+        "    print('dog')\n",
+        "  \n",
+        "  def who_says(obj):\n",
+        "    obj.say()\n",
+        "\n",
+        "animal = Animal()\n",
+        "cat = Cat()\n",
+        "dog = Dog()\n",
+        "\n",
+        "who_says(animal)\n",
+        "who_says(cat)\n",
+        "who_says(dog)\n"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "animal\n",
+            "cat\n",
+            "dog\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gJ0m10uwGOls"
+      },
+      "source": [
+        "#### 컴포지션 \n",
+        "- 상속 : 자식 is a 부모 \n",
+        "- 컴포지션: X has Y \n",
+        "- 학교는 ‘’을 소유한다 \n",
+        "- 선생님과 학생은 학교에 소속된다"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jm8MrHslGJYO"
+      },
+      "source": [
+        "class Member:\n",
+        "  def __init__(self, name, class_num):\n",
+        "    self.name = name\n",
+        "    self.class_num = class_num\n",
+        "\n",
+        "  def get_role(self):\n",
+        "    return 'member'\n",
+        "    \n",
+        "  def __str__(self):\n",
+        "    return f'이름은{self.name}, 반은{self.class_num}'\n",
+        "\n",
+        "class Student(Member):\n",
+        "  def study(self):\n",
+        "    print(f'{self.name} 공부중')\n",
+        "    \n",
+        "class Teacher(Member):\n",
+        "  def lecture(self):\n",
+        "    print(f'{self.name} 강의중')\n"
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JwhLP3_wGl2A",
+        "outputId": "f2a1c992-19af-4a86-8f3b-3ad5802f86e7"
+      },
+      "source": [
+        "class School:\n",
+        "  def __init__(self):\n",
+        "    self.teachers = []\n",
+        "    self.students = []\n",
+        "  \n",
+        "  def register_teacher(self, teacher):\n",
+        "    self.teachers.append(teacher)\n",
+        "  \n",
+        "  def register_student(self, student):\n",
+        "    self.students.append(student)\n",
+        "\n",
+        "student1 = Student('jay1', 1)\n",
+        "student2 = Student('kim1', 1)\n",
+        "\n",
+        "teacher1 = Teacher('T1', 1)\n",
+        "teacher2 = Teacher('T2', 2)\n",
+        "\n",
+        "school = School()\n",
+        "school.register_student(student1)\n",
+        "school.register_student(student2)\n",
+        "\n",
+        "school.register_teacher(teacher1)\n",
+        "school.register_teacher(teacher2)\n",
+        "\n",
+        "print(school.students)\n",
+        "print(school.teachers)\n"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[<__main__.Student object at 0x7fb8d7235490>, <__main__.Student object at 0x7fb8d7441f10>]\n",
+            "[<__main__.Teacher object at 0x7fb8d7406790>, <__main__.Teacher object at 0x7fb8d7402190>]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S8a0dke2GusV"
       },
       "source": [
         ""
