--- a/TestCode.ipynb
+++ b/TestCode.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1ThUnLq2eUXmsQ7YfyLfHDwG2h0dDLvkh",
-      "authorship_tag": "ABX9TyPFzVIEUfZOcOmMUNmTJpf7",
+      "authorship_tag": "ABX9TyNKMeKYRdN7M4C0F3km3ak/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4973,9 +4973,443 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1dBmN2tlG7hJ"
+      },
+      "source": [
+        "### Iterable object\n",
+        "\n",
+        "- sequence : range, list, tuple, str \n",
+        "- collection: dictionary, set"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T69zU6lrHEFu"
+      },
+      "source": [
+        "#### iterable\n",
+        "- __iter__메서드를 제공하는 클래스의 ABC(추상클래스).\n",
+        "- 객체가 이터러블인지를 확인 : iter(obj)를 호출하는 것\n",
+        "- iter()함수는 __iter__메서드가 구현되어 있는지 체크함(TypeError)\n",
+        "- iter()호출시 이터러블 객체의 __iter__호출\n",
+        "- __iter__메서드를 구현해야 하며 iterator를 반환해야 함"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "S8a0dke2GusV"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        },
+        "id": "S8a0dke2GusV",
+        "outputId": "438ebfc6-2fed-4738-ce67-b3e1def17100"
+      },
+      "source": [
+        "class collections.abc.Iterable\n",
+        "# __iter__() 메서드를 제공하는 클래스의 ABC."
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-7b5cd04e1b05>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    class collections.abc.Iterable\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ezVFKD4WHWLc"
+      },
+      "source": [
+        "- __iter__  메서드가 존재하는지 확인"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c2QQwdF0HTSt",
+        "outputId": "670159b5-6f2e-450f-88f6-17a977140013"
+      },
+      "source": [
+        "print([].__iter__)\n",
+        "print(().__iter__)\n",
+        "print({}.__iter__)\n",
+        "print(''.__iter__)\n",
+        "print(range(1).__iter__)\n",
+        "print(set().__iter__)\n",
+        "# print(0.__iter__) # error\n"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<method-wrapper '__iter__' of list object at 0x7fb8d7225140>\n",
+            "<method-wrapper '__iter__' of tuple object at 0x7fb900928050>\n",
+            "<method-wrapper '__iter__' of dict object at 0x7fb8d720faa0>\n",
+            "<method-wrapper '__iter__' of str object at 0x7fb90095e3b0>\n",
+            "<method-wrapper '__iter__' of range object at 0x7fb8d7234db0>\n",
+            "<method-wrapper '__iter__' of set object at 0x7fb8d7435c80>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wxfQtQT6He5G",
+        "outputId": "238d5ade-d358-431d-e87e-e25fc1b4491c"
+      },
+      "source": [
+        "# iter 함수: iterator 반환\n",
+        "print(iter([])) \n",
+        "#list_iterator 반환\n",
+        "print(iter(())) \n",
+        "#tuple_iterator 반환\n",
+        "print(iter({})) \n",
+        "#dict_keyiterator 반환\n",
+        "print(iter('')) \n",
+        "#str_iterator 반환\n",
+        "print(iter(range(1))) \n",
+        "#range_iterator 반환\n",
+        "# print(iter(0)) # error\n"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<list_iterator object at 0x7fb8d7223150>\n",
+            "<tuple_iterator object at 0x7fb8e1549610>\n",
+            "<dict_keyiterator object at 0x7fb8d72247d0>\n",
+            "<str_iterator object at 0x7fb8e1549610>\n",
+            "<range_iterator object at 0x7fb8d7234600>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dDJPzu2HHmhN"
+      },
+      "source": [
+        "- 실질적으로 순환이 가능한 객체 \n",
+        "- iterable한 객체, 추가적으로 __next__\n",
+        "메서드를\n",
+        "구현해야함\n",
+        "- next() 함수 호출수 iterator\n",
+        "의 __next__ 실행"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        },
+        "id": "mAAAZ37AHlcz",
+        "outputId": "e695cc77-aa2b-40b5-936a-8b17d2a802b5"
+      },
+      "source": [
+        "class collections.abc.Iterator\n",
+        "# __iter__() 와 __next__() 메서드를 제공하는 클래스의 ABC. 이터레이터의 정의도 참조하십시오."
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-52-f775b35cb311>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    class collections.abc.Iterator\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nlyR0lWnH_sS"
+      },
+      "source": [
+        "- __iter__ 메서드가 존재\n",
+        "- __next__ 메서드 존재\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GaD-EHRsH-Ce",
+        "outputId": "157f94d2-d2f1-4120-e7d9-f75ca945312e"
+      },
+      "source": [
+        "iterator_result = iter([1,2])\n",
+        "print(iterator_result.__iter__)\n",
+        "print(iterator_result.__next__)\n",
+        "print(next(iterator_result)) \n",
+        "print(next(iterator_result)) \n"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<method-wrapper '__iter__' of list_iterator object at 0x7fb8d730c950>\n",
+            "<method-wrapper '__next__' of list_iterator object at 0x7fb8d730c950>\n",
+            "1\n",
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C5nUVnyQIJVY"
+      },
+      "source": [
+        "#### Iterator 구현\n",
+        "- __iter__ 메서드가 존재\n",
+        "- __next__ 메서드 존재"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8qxi38vzIH_B",
+        "outputId": "524bf536-5691-4020-c509-5a74dc3d658f"
+      },
+      "source": [
+        "# iterator 구현해보기\n",
+        "# MyCollection은 iterable하면서 iterator 임\n",
+        "# iterator를 __iter__와 __next__를 구현해야함\n",
+        "class MyCollection:\n",
+        "  def __init__(self):\n",
+        "    self.size = 1\n",
+        "    self.data = range(0, self.size)\n",
+        "  \n",
+        "  def __iter__(self):\n",
+        "    self.index = 0\n",
+        "    return self\n",
+        "    \n",
+        "  def __next__(self):\n",
+        "    if self.index >= self.size:\n",
+        "      raise StopIteration\n",
+        "      \n",
+        "    n = self.data[self.index]\n",
+        "    self.index += 1\n",
+        "    return n\n",
+        "    \n",
+        "c_tor = iter(MyCollection())\n",
+        "print(next(c_tor)) #0\n"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AvEr6NvKIji_"
+      },
+      "source": [
+        "#### Iterator \n",
+        "- __iter__ , __next__ 를 매번 구현하기가 쉽지 않고 복잡\n",
+        "- 쉽게 iterator 객체를만들수 있는방법 제공\n",
+        "- Generator"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QjMlcu5jIz9T"
+      },
+      "source": [
+        "#### Generator\n",
+        "\n",
+        "- return 대신 yield statement가 있는 function이다.\n",
+        "  - yield statement로 그 function의 state를 save한 후, return한다.\n",
+        "  - generator가 다시(next())call되면 sate는 복구된다(그전 data value들을 모두 기억한다.)\n",
+        "  - yield의 다음 statement에서 resume된다.\n",
+        "- Generator는 모든 data sequence를 생성하여 저장하는 것이 아니라, 필요한 data만\n",
+        "바로 산출한다.\n",
+        "  - generator function을 call하는 일은 사실, generator object create하는 일이다.\n",
+        "  - for loop에서 iterate될 때 필요한 data를 산출한다.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xFC7s4zRJA4p"
+      },
+      "source": [
+        "- yield로 구성한 generator의 경우, \n",
+        "  - OS가 context switching하는 것처럼 동작하지만,\n",
+        "  - 중요한 것은 리스트처럼 메모리에 생성하는 것이 아니라\n",
+        "  - 그때 그때마다 값을 넘겨주고 다시 call되는 과정을 거쳐 call 될때 마다 resume한 다는\n",
+        "것(즉, 메모리를 거의 사용하지 않는 함수이다.)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kFDzB3muIiFl",
+        "outputId": "fd52964c-e85d-43fc-8e5b-ede832262b00"
+      },
+      "source": [
+        "def gen_fib(n):\n",
+        "# \"\"\"generate a Fibonacci series up to n. \"\"\"\n",
+        "  a, b = 0, 1\n",
+        "  while (a<n):\n",
+        "    yield a\n",
+        "    a, b = b, a+b\n",
+        "\n",
+        "gen_fib(2000)\n",
+        "list(gen_fib(1000))\n",
+        "\n",
+        "for i in gen_fib(2000):\n",
+        "  print(i, end=' ')"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597 "
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        },
+        "id": "nIItiwf7JKy_",
+        "outputId": "fff11e8d-9611-4692-bec2-ebc5b3ffe907"
+      },
+      "source": [
+        "def space_location(text):\n",
+        "# \"\"\"공백의 위치를 리턴 \"\"\"\n",
+        "result = []\n",
+        "\n",
+        "if text:\n",
+        "  result.append(0)\n",
+        "for index, letter in enumerate(address, 1):\n",
+        "  if letter == ' ':\n",
+        "    result.append(index)\n",
+        "\n",
+        "return result\n",
+        "\n",
+        "address = '우리는 이터레이터를 테스트 하고 있습니다.'\n",
+        "result = space_location(address)\n",
+        "print(result)"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-59-2c927d241f15>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    result = []\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        },
+        "id": "CKwGwP0bJVzO",
+        "outputId": "cf9d47a9-b20c-4ab5-8f88-2a73e9ec4753"
+      },
+      "source": [
+        "def space_location_iter(text):\n",
+        "# \"\"\"공백의 위치를 리턴 \"\"\"\n",
+        "result = []\n",
+        "\n",
+        "if text:\n",
+        "  yield 0\n",
+        "for index, letter in enumerate(address, 1):\n",
+        "  if letter == ' ':\n",
+        "    yield index\n",
+        "\n",
+        "address = '우리는 이터레이터를 테스트 하고 있습니다.'\n",
+        "it = space_location_iter(address)\n",
+        "print(next(it))\n",
+        "print(next(it))\n",
+        "\n",
+        "result = list(space_location_iter(address))\n",
+        "print(result)"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-60-efb3ea98a902>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    result = []\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vw2hfSVEJjK8"
+      },
+      "source": [
+        "리스트를 반환하기 보다는 제너레이터를 사용하자\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W1aSYaiPJhnB"
       },
       "source": [
         ""
